services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-service
spec:
  ports:
    - port: 80
  selector:
    app: nodejs-app
